# sort-of-pastebin

./: .envrc  .gitignore  LICENSE  README.md  README.org  conftest.py  docker-compose.yml  flake.nix  pyproject.toml  tests.py
.github/workflows/: build_containers.yml  tests.yml
snapbin/: database.py  main.py  utils.py
snapbin/models/: __init__.py  base_model.py  secret.py
src/: main.py  utils.py
src/snapbin/: main.py  utils.py
src/snapbin/models/: base_model.py
src/templates/: set_password.html
