[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapbin"
version = "0.1.0"
requires-python = ">=3.12"
description = "A little service to store and encrypt information, deleting it once it's retrieved."
authors = [
    {name = "Andreas Zweili", email = "andreas@zweili.ch"},
]
license = "GPL-3.0-or-later"
readme = {file = "README.org", content-type = "text/plain"}

[tool.mypy]
strict = true

[tool.ruff]
src = ["src"]
line-length = 88
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
select = [ "ALL" ]

[tool.ruff.lint.isort]
force-single-line = true